// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolve-saga: eventHandler 1`] = `
Array [
  Array [
    Object {
      "defineTable": [MockFunction],
      "delete": [MockFunction],
      "find": [MockFunction],
      "insert": [MockFunction],
    },
    Object {
      "aggregateId": "aggregateId",
      "aggregateVersion": 1,
      "payload": Object {
        "content": true,
      },
      "timestamp": 100,
      "type": "EVENT_TYPE",
    },
    Object {},
  ],
]
`;

exports[`resolve-saga: eventstoreAdapter.loadEvents 1`] = `Array []`;

exports[`resolve-saga: executeCommand 1`] = `Array []`;

exports[`resolve-saga: executeQuery 1`] = `Array []`;

exports[`resolve-saga: performAcknowledge 1`] = `
Array [
  Array [
    Object {
      "batchId": undefined,
      "result": Object {
        "error": null,
        "eventSubscriber": "test-saga",
        "failedEvent": null,
        "successEvent": Object {
          "type": "Init",
        },
      },
    },
  ],
  Array [
    Object {
      "batchId": undefined,
      "result": Object {
        "error": null,
        "eventSubscriber": "test-saga",
        "failedEvent": null,
        "successEvent": Object {
          "aggregateId": "aggregateId",
          "aggregateVersion": 1,
          "payload": Object {
            "content": true,
          },
          "timestamp": 100,
          "type": "EVENT_TYPE",
        },
      },
    },
  ],
]
`;

exports[`resolve-saga: readModelConnectors['default-connector'].connect 1`] = `
Array [
  Array [
    undefined,
  ],
  Array [
    undefined,
  ],
  Array [
    undefined,
  ],
]
`;

exports[`resolve-saga: readModelConnectors['default-connector'].disconnect 1`] = `
Array [
  Array [
    Object {
      "defineTable": [MockFunction],
      "delete": [MockFunction],
      "find": [MockFunction],
      "insert": [MockFunction],
    },
    undefined,
  ],
  Array [
    Object {
      "defineTable": [MockFunction],
      "delete": [MockFunction],
      "find": [MockFunction],
      "insert": [MockFunction],
    },
    undefined,
  ],
  Array [
    Object {
      "defineTable": [MockFunction],
      "delete": [MockFunction],
      "find": [MockFunction],
      "insert": [MockFunction],
    },
    undefined,
  ],
]
`;

exports[`resolve-saga: readModelConnectors['default-connector'].drop 1`] = `
Array [
  Array [
    Object {
      "defineTable": [MockFunction],
      "delete": [MockFunction],
      "find": [MockFunction],
      "insert": [MockFunction],
    },
    undefined,
    Object {},
  ],
]
`;

exports[`resolve-saga: readModelStore.defineTable 1`] = `Array []`;

exports[`resolve-saga: readModelStore.delete 1`] = `Array []`;

exports[`resolve-saga: readModelStore.find 1`] = `Array []`;

exports[`resolve-saga: readModelStore.insert 1`] = `Array []`;

exports[`resolve-saga: scheduler.addEntries 1`] = `Array []`;

exports[`resolve-saga: scheduler.clearEntries 1`] = `Array []`;

exports[`resolve-saga: snapshotAdapter.loadSnapshot 1`] = `Array []`;

exports[`resolve-saga: snapshotAdapter.saveSnapshot 1`] = `Array []`;
